feat: Rename project and update branding
Updates the project name from "Visa & Document Clarity Assistant" to "Immigration Docs Assistant" across `package.json`, `index.html`, and `metadata.json`.

Refactors `geminiService.ts` to use generic `summary` and `title`/`description` fields in the API schema and the `AnalysisResult` type, preparing for multilingual support.

Introduces `Locale` type and prepares for internationalization by passing locale props to components like `DisclaimerBanner` and `InputSection`, and adds a `locale` field to `AppState`.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "visa-&-document-clarity-assistant",
+  "name": "immigration-docs-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
